[gd_scene load_steps=59 format=2]

[ext_resource path="res://Dude/Dudes.png" type="Texture2D" id=1]
[ext_resource path="res://Dude2/Dude2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 42, 37 )

[sub_resource type="Animation" id=2]
resource_name = "AimDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=3]
resource_name = "AimLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PackedFloat32Array( 0.2 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "aim_animation_finished"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "AimRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PackedFloat32Array( 0.2 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "aim_animation_finished"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "AimUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PackedFloat32Array( 0.2 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "aim_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41, 38 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.5 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35, 36, 37, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.6 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 28 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.6 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 42, 43, 44, 45, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.6 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}

[sub_resource type="Animation" id=14]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 22 ]
}

[sub_resource type="Animation" id=15]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 27, 16 ]
}

[sub_resource type="Animation" id=16]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 25, 12 ]
}

[sub_resource type="Animation" id=17]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 26, 19 ]
}

[sub_resource type="Animation" id=18]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=19]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=20]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=21]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "AimDown"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "AimRight"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "AimUp"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "AimLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "ShootLeft"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "ShootDown"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "ShootUp"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "ShootRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=41]
blend_point_0/node = SubResource( 37 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 38 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 39 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 40 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
snap = Vector2( 0.01, 0.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=46]
blend_point_0/node = SubResource( 42 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 43 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 44 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 45 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=55]
states/Aim/node = SubResource( 26 )
states/Aim/position = Vector2( 235, 188.5 )
states/Idle/node = SubResource( 31 )
states/Idle/position = Vector2( 438.625, 188.25 )
states/Roll/node = SubResource( 36 )
states/Roll/position = Vector2( 439.75, 72 )
states/Shoot/node = SubResource( 41 )
states/Shoot/position = Vector2( 96, 77.75 )
states/Walk/node = SubResource( 46 )
states/Walk/position = Vector2( 658.5, 187 )
transitions = [ "Idle", "Walk", SubResource( 47 ), "Walk", "Idle", SubResource( 48 ), "Roll", "Idle", SubResource( 49 ), "Idle", "Roll", SubResource( 50 ), "Aim", "Idle", SubResource( 51 ), "Idle", "Aim", SubResource( 52 ), "Aim", "Shoot", SubResource( 53 ), "Shoot", "Aim", SubResource( 54 ) ]
start_node = "Idle"
graph_offset = Vector2( -220.072, 1.95402 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=56]

[node name="Dude2" type="CharacterBody2D"]
position = Vector2( 301, 286 )
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
rotation = -0.0767945
z_as_relative = false

[node name="Position2D4" type="Marker2D" parent="Node2D"]
position = Vector2( 175.946, -188.056 )
rotation = 0.0191986

[node name="Position2D3" type="Marker2D" parent="Node2D"]
position = Vector2( -141.424, -208.464 )

[node name="Position2D2" type="Marker2D" parent="Node2D"]
position = Vector2( 6.67574, -138.897 )

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2( 10.9738, -272.963 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( -3, -119 )
scale = Vector2( 0.386023, 0.356 )
texture = ExtResource( 1 )
hframes = 6
vframes = 8
frame = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.99983, 0.999969 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AimDown = SubResource( 2 )
anims/AimLeft = SubResource( 3 )
anims/AimRight = SubResource( 4 )
anims/AimUp = SubResource( 5 )
anims/IdleDown = SubResource( 6 )
anims/IdleLeft = SubResource( 7 )
anims/IdleRight = SubResource( 8 )
anims/IdleUp = SubResource( 9 )
anims/RollDown = SubResource( 10 )
anims/RollLeft = SubResource( 11 )
anims/RollRight = SubResource( 12 )
anims/RollUp = SubResource( 13 )
anims/ShootDown = SubResource( 14 )
anims/ShootLeft = SubResource( 15 )
anims/ShootRight = SubResource( 16 )
anims/ShootUp = SubResource( 17 )
anims/WalkDown = SubResource( 18 )
anims/WalkLeft = SubResource( 19 )
anims/WalkRight = SubResource( 20 )
anims/WalkUp = SubResource( 21 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 55 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 56 )
parameters/Aim/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Roll/blend_position = Vector2( 0, 0 )
parameters/Shoot/blend_position = Vector2( -0.0491284, -0.578448 )
parameters/Walk/blend_position = Vector2( -0.0127551, 0.552361 )
